# grasp

./: CMakeLists.txt  README.md  index.html
doxygen/: generate.txt
doxygen/doc/html/: Box3D_8cpp_source.html  Box3D_8h_source.html  DHiCub_8m_source.html  (+119 more)
grasp/synergies/messages/: CMakeLists.txt
grasp/synergies/messages/MessageFormats/: CMakeLists.txt  GraspMessages.h
grasp/synergies/src/GraspModule/: CMakeLists.txt
grasp/synergies/src/GraspModule/include/: IcubVisThread.h  PrintFunctions.h  Vocabs.h
grasp/synergies/src/GraspModule/src/: ConfigMessages.xslt  IcubVisThread.cpp
lib/: CMakeLists.txt
lib/forceClosure/: CMakeLists.txt
lib/forceClosure/include/iCub/grasp/: forceClosure.h
lib/forceClosure/src/: forceClosure.cpp
lib/minimumBoundingBox/: CMakeLists.txt
lib/minimumBoundingBox/include/iCub/data3D/: boundingBox.h  minBoundBox.h
lib/minimumBoundingBox/include/iCub/data3D/private/: helpers.h
lib/minimumBoundingBox/src/: boundingBox.cpp  helpers.cpp  minBoundBox.cpp
lib/objects3D/: CMakeLists.txt  iCub_data3D_objects3D_thrift.cmake
lib/objects3D/include/iCub/data3D/: Box3D.h  PointXYZ.h  Polygon.h  RGBA.h  SurfaceMesh.h  SurfaceMeshWithBoundingBox.h
lib/objects3D/src/iCub/data3D/: Box3D.cpp  PointXYZ.cpp  Polygon.cpp  RGBA.cpp  SurfaceMesh.cpp  SurfaceMeshWithBoundingBox.cpp
object-reconstruction/: CMakeLists.txt  object-reconstruction.xml
object-reconstruction/app/: CMakeLists.txt
object-reconstruction/app/conf/: config.ini
object-reconstruction/app/scripts/: object-reconstruction.xml.template
object-reconstruction/include/: objectReconstr.h  reconstructionRoutine.h  visThread.h
object-reconstruction/src/: main.cpp  objectReconstr.cpp  reconstructionRoutine.cpp  visThread.cpp
power-grasp/: CMakeLists.txt
power-grasp/app/: CMakeLists.txt
power-grasp/include/: orientationThread.h  powerGrasp.h  visualizationThread.h
power-grasp/src/: main.cpp  orientationThread.cpp  powerGrasp.cpp  visualizationThread.cpp
precision-grasp/: CMakeLists.txt
precision-grasp/graspSynthesis/: CMakeLists.txt
precision-grasp/graspSynthesis/app/: CMakeLists.txt
precision-grasp/graspSynthesis/app/conf/: config.ini
precision-grasp/graspSynthesis/app/matlab/: DHiCub.m  FKinStd.m  axis2dcm.m  dcm2axis.m  drawHandiCub.m  drawHandiCubCAD.m  drawResults.m  drawResultsiCub.m  fkiCub.m  iCubPlot.m  left_hand.mat  module.m  moduleNew.m  moduleOld.m  module_new.m  module_offline.m  right_hand.mat  rototranslation.m  save_CAD.m  transformation.m
precision-grasp/graspSynthesis/app/scripts/: precision-grasp.xml
precision-grasp/graspSynthesis/include/: precisionGrasp.h  psoThread.h  visualizationThread.h
precision-grasp/graspSynthesis/src/: main.cpp  precisionGrasp.cpp  psoThread.cpp  visualizationThread.cpp
precision-grasp/handIKModule/: CMakeLists.txt
precision-grasp/handIKModule/include/: handIK.h  handIKModule.h
precision-grasp/handIKModule/src/: handIK.cpp  handIKModule.cpp  main.cpp  testHandIK.cpp
synergies/: CMakeLists.txt  DARWIN_ROOT.ini  mainpage.dox  readme.txt
synergies/app/: CMakeLists.txt
synergies/app/GraspModuleApp/: CMakeLists.txt  ymanager.ini
synergies/app/GraspModuleApp/conf/icub/: cuboid.ini
synergies/app/GraspModuleApp/conf/icub/visualization/: baseicub.xcf  pos text
synergies/app/GraspModuleApp/scripts/icub/: GraspInterfaceIcub.xml.template  GraspYarpScopeIcubSim.xml.template
synergies/cmake/: YarpInstallationHelpers.cmake
synergies/doc/: grasp_doc
synergies/doc/doc/html/: GraspModuleThread_8h.html  GraspModule_2include_2PrintFunctions_8h_source.html  GraspModule_2include_2Vocabs_8h_source.html  GraspModule_8cpp.html  GraspModule_8h.html  GraspModule_8h_source.html  IcubThread_8cpp.html  IcubThread_8h.html  IcubThread_8h_source.html  IcubVisThread_8h.html  IcubVisThread_8h_source.html  ObserverStub_2include_2PrintFunctions_8h_source.html  ObserverStub_8h_source.html  PortMap_8h.html  PortMap_8h_source.html  PrintFunctions_8h.html  PrintFunctions_8h_source.html  PumaThread_8cpp.html  PumaThread_8h.html  PumaThread_8h_source.html  ThreadFactory_8h_source.html  TypeSafeBottle_8h_source.html  Util_8h.html  Util_8h_source.html  VocabDefinitions_8h.html  VocabDefinitions_8h_source.html  Vocabs_8h.html  annotated.html  classdarwin_1_1grasp_1_1ConnectStructure.html  classdarwin_1_1grasp_1_1GraspModule.html  classdarwin_1_1grasp_1_1GraspModuleThread.html  classdarwin_1_1grasp_1_1GraspThreadImpl.html  classdarwin_1_1grasp_1_1IcubAngles.html  classdarwin_1_1grasp_1_1IcubObjectData.html  classdarwin_1_1grasp_1_1IcubTouch.html  classdarwin_1_1grasp_1_1IcubVisThread.html  classdarwin_1_1grasp_1_1ObserverStub.html  classdarwin_1_1grasp_1_1PortMap.html  classdarwin_1_1grasp_1_1PumaConfigParameters.html  classdarwin_1_1grasp_1_1PumaDisplacementParameters.html  (+45 more)
synergies/doc/doc/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  files_6.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  groups_0.js  namespaces_0.js  variables_2.js  variables_3.js  variables_4.js  (+5 more)
synergies/messages/MessageFormats/: GraspMessages.xml  GraspMessages.xsd  GraspMessages.xslt  VocabDefinitions.h
synergies/messages/MessageFormats/TypeSafeBottle/: YarpTypeSafeBottle.xsd  YarpTypeSafeBottle.xslt
synergies/messages/TypeSafeBottle/: CMakeLists.txt  TypeSafeBottle.h  YarpTypeSafeBottle.xslt
synergies/messages/doc/: README.txt  YarpTypeSafeBottle.pptx
synergies/src/: CMakeLists.txt
synergies/src/GraspModule/include/: ConfigMessages.h  GraspModule.h  GraspModuleThread.h  GraspThreadImpl.h  IcubThread.h  PortMap.h  ThreadFactory.h  Util.h
synergies/src/GraspModule/src/: ConfigMessages.xml  ConfigMessages.xsd  GraspModule.cpp  GraspThreadImpl.cpp  IcubThread.cpp  ThreadFactory.cpp  main.cpp
(+113 files in other folders)
